fix z-index

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,32 +33,27 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 0 3.9rem;
-  z-index: 8;
 }
 
 .logo {
   height: 3.7rem;
   width: 3.6rem;
-  z-index: 8;
 }
 
 .contact-list {
   display: flex;
   gap: 4.5rem;
-  z-index: 8;
 }
 
 .contact-list-item a {
   color: #867772;
   font-weight: 200;
   font-size: 1.6rem;
-  z-index: 8;
 }
 
 .contact-list-item a:hover {
   color: rgba(255, 255, 255, 0.815);
   text-decoration: underline rgba(255, 255, 255, 0.815);
-  z-index: 8;
 }
 
 /* !aside & main nav */
@@ -68,13 +63,13 @@ aside {
   margin-top: 6.5rem;
   width: 3rem;
   position: fixed;
-  z-index: 2;
+  z-index: 3;
 }
 
 .aside-list-item a {
   color: #737373;
   font-size: 1.5rem;
-  z-index: 2;
+  z-index: 3;
 }
 
 .aside-list-item .selected-link {
@@ -92,8 +87,8 @@ aside {
   border: 0.3rem solid white;
   border-radius: 50%;
   position: absolute;
-  top: -0.63rem;
-  left: -4.28rem;
+  top: -0.6rem;
+  left: -4.25rem;
   z-index: 3;
   background-color: transparent;
 }
@@ -112,7 +107,7 @@ aside {
 }
 .circle {
   height: 1.5rem;
-  z-index: 2;
+  z-index: 3;
 }
 
 .decoration-line {
@@ -121,7 +116,6 @@ aside {
   border-left: 1px solid #737373;
   position: relative;
   left: 0.68rem;
-  background-color: yellow;
   z-index: 2;
 }
 
